# GitSQL

./: .gitignore  Cargo.toml  README.md  build.rs
db/caches/: 01_object_type_cache.sql
db/functions/: 00_git_lookup_commit.sql  01_git_resolve_ref.sql  02_git_commit_log.sql  03_git_parse_tree.sql  04_git_lookup_tree.sql  05_git_create_pack.sql  05_git_parse_object_type.sql  06_git_crawl_tree.sql  07_git_shallow_crawl.sql  08_git_parse_commit.sql  09_git_lookup_tree_item_at.sql
db/functions/specials/: 00_git_parse_object_type.sql  01_git_load_object.sql  02_git_fast_object_type.sql
db/headers/: 00_extensions.sql
db/indexes/: 00_object_types.sql  01_object_hashes.sql
db/scripts/: generate.sh  generate_light.sh  import.sh
db/tables/: 00_objects.sql  01_refs.sql
db/types/: 00_object_type.sql  01_commit_type.sql  02_tree_entry.sql  03_tree_entity.sql  04_internal_tree_stack.sql
db/views/: 00_headers.sql  01_contents.sql  02_commits.sql
git-sql/: Cargo.toml  build.rs  config.toml
git-sql-php/: config.php  head.php  refs.php  route.php  utils.php
git-sql-python/: git_sql_import.py  requirements.txt
git-sql/src/: cli.yaml  main.rs
git-sql/src/client/: mod.rs
git-sql/src/server/: mod.rs
git-sql/src/updater/: mod.rs
importers/: git_sql_import.py
nextgen/: Cargo.toml
nextgen/src/: cli.yaml  main.rs
nextgen/src/client/: mod.rs
nextgen/src/server/: mod.rs
nextgen/src/updater/: mod.rs
src/: cli.yaml  main.rs
src/client/: mod.rs
src/core/: mod.rs
src/pgutil/: mod.rs
src/server/: mod.rs
src/updater/: mod.rs
tools/: requirements.txt
tools/importers/: .gitignore
tools/php/: config.php  object.php  refs.php  utils.php
tools/server/: gitsrv.py
tools/updaters/: git_sql_update.py
tools/utils/: pack_writer.py
web/: Cargo.toml
web/src/: main.rs
web/static/: index.html
