[package]
name = "gitsql"
version = "0.0.1"
authors = ["Kenneth Endfinger <kaendfinger@gmail.com>"]
build = "build.rs"

[dependencies]
git2 = { git = "https://github.com/alexcrichton/git2-rs.git", branch = "master" }
clap = { version = "2.29", features = ["yaml"] }

simple-error = "0.1.10"

postgres = "0.15.1"
postgres_array = "0.9.0"
rand = "0.3"

iron = "0.6.*"
router = "*"
logger = "*"

env_logger = "0.4.3"

sha1 = "0.3.0"
flate2 = "1.0"
lazy_static = "1.0"
toml = "0.4.5"

[build-dependencies]
glob = "0.2.11"

[[bin]]
name = "gitsql"
path = "src/main.rs"
