[package]
name = "git-sql"
description = "Git on SQL"
license = "MIT"
keywords = ["git", "postgres", "postgresql"]
readme = "README.md"
documentation = "https://docs.rs/git-sql"
version = "0.0.1"
authors = ["Kenneth Endfinger <kaendfinger@gmail.com>"]
build = "build.rs"

[dependencies]
git2 = "0.6.11"
clap = { version = "2.29", features = ["yaml"] }

simple-error = "0.1.10"

postgres = { version = "0.15.1", features = ["with-openssl"] }
postgres_array = "0.9.0"
rand = "0.3"

iron = "0.6.*"
router = "*"
logger = "*"

env_logger = "0.4.3"

sha1 = "0.3.0"
flate2 = "1.0"
lazy_static = "1.0"
toml = "0.4.5"

[build-dependencies]
glob = "0.2.11"

[[bin]]
name = "git-sql"
path = "src/main.rs"
