[package]
name = "git-sql"
description = "Git on SQL"
license = "MIT"
keywords = ["git", "postgres", "postgresql"]
readme = "README.md"
documentation = "https://docs.rs/git-sql"
version = "0.1.0"
authors = ["Kenneth Endfinger <kaendfinger@gmail.com>"]
build = "build.rs"

[dependencies]
git2 = "0.7.1"
clap = { version = "2.31.2", features = ["yaml"] }

simple-error = "0.1.11"

postgres = { version = "0.15.2", features = ["with-openssl"] }
postgres_array = "0.9.0"

r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"

jobsteal = "0.5.1"

rand = "0.4.2"

iron = "0.6.*"
router = "0.6.*"
logger = "0.4.*"

env_logger = "0.5.7"

flate2 = "1.0.1"
lazy_static = "1.0.0"
toml = "0.4.6"

sha1 = "0.6.0"
hex = "0.3.2"

[build-dependencies]
glob = "0.2.11"

[[bin]]
name = "git-sql"
path = "src/main.rs"
