[package]
name = "git-sql"
description = "Git on SQL"
license = "MIT"
keywords = ["git", "postgres", "postgresql"]
readme = "README.md"
documentation = "https://docs.rs/git-sql"
version = "0.1.0"
authors = ["Kenneth Endfinger <kaendfinger@gmail.com>"]
build = "build.rs"

[dependencies]
git2 = "0.10.1"
clap = { version = "2.33.0", features = ["yaml"] }

simple-error = "0.2.1"

postgres = { version = "0.15.2" }
postgres-openssl = "0.1.0"
postgres_array = "0.9.0"

openssl = "0.10.25"

r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"

jobsteal = "0.5.1"

rand = "0.7.2"

iron = "0.6.1"
router = "0.6.0"
logger = "0.4.0"

env_logger = "0.7.0"

flate2 = "1.0.12"
lazy_static = "1.4.0"
toml = "0.5.3"

sha1 = "0.6.0"
hex = "0.4.0"

pbr = "1.0.2"

console = "0.9.0"

[build-dependencies]
glob = "0.3.0"

[[bin]]
name = "git-sql"
path = "src/main.rs"
